[project]
name = "smart-building-logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Luuk Weiss",email = "l.weiss@saxion.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-json-logger (>=3.3.0,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
